// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> Should render correctly 1`] = `
.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c0:focus-within,
.c0:focus {
  position: relative;
  outline: none !important;
}

.c0:focus-within::after,
.c0:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c1 {
  margin: 0;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-within::after,
  .c0:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: orchid;
    fill: orchid;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

<div>
  <a
    class="c0"
    href="/test"
  >
    <span
      class="c1"
    >
      some text
    </span>
  </a>
</div>
`;

exports[`<TextLink /> Should render correctly with custom className 1`] = `
.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c0:focus-within,
.c0:focus {
  position: relative;
  outline: none !important;
}

.c0:focus-within::after,
.c0:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c1 {
  margin: 0;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-within::after,
  .c0:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: orchid;
    fill: orchid;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

<div>
  <a
    class="c0 test-custom-classname"
    href="/test"
  >
    <span
      class="c1"
    >
      some text
    </span>
  </a>
</div>
`;

exports[`<TextLink /> Should render with nextified href 1`] = `
.c0 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c0:focus-within,
.c0:focus {
  position: relative;
  outline: none !important;
}

.c0:focus-within::after,
.c0:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c0:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c1 {
  margin: 0;
}

@media (prefers-color-scheme:dark) {
  .c0:focus-within::after,
  .c0:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    color: orchid;
    fill: orchid;
  }

  .c0:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

<div>
  <a
    class="c0"
    href="/blog/test"
  >
    <span
      class="c1"
    >
      some text
    </span>
  </a>
</div>
`;
